--- a/index.html
+++ b/index.html
@@ -1481,19 +1481,19 @@
                     <div class="col-lg-3 col-sm-6 pt-sm-5">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="assets/images/about/team/1-1-270x270.png" alt="Team Member">
+                                <img src="assets/images/about/team/alvin.jpg" alt="Team Member">
                                 <div class="inner-content">
                                     <h2 class="team-member-name">Alvin</h2>
                                     <span class="occupation">Developer</span>
                                     <div class="social-link with-border">
                                         <ul>
                                             <li>
-                                                <a href="#" data-tippy="linkedin" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                                                <a href="https://www.linkedin.com/in/alvin-alvin-32b764238/" data-tippy="linkedin" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
                                                     <i class="fa fa-linkedin"></i>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#" data-tippy="github" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                                                <a href="https://github.com/Alvin-kor" data-tippy="github" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
                                                     <i class="fa fa-github"></i>
                                                 </a>
                                             </li>
